--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -1,40 +1,51 @@
 <!DOCTYPE html>
 <html xmlns:th="http://thymeleaf.org">
-	<head>
-		<title>Users</title>
-	</head>
-	<body>
-		<h1>Users</h1>
-		
-		<div th:if="${#lists.size(users) == 1}">
-			<form action="" method="post">
-				<div>
-					Username: <input type="text" th:field="${user.username}" />
-				</div>
-				<div>
-					Password: <input type="password" th:field="${user.password}" />
-				</div>
-				<div>
-					Full Name: <input type="text" th:field="${user.name}" />
-				</div>
-				<div>
-					<input type="submit" value="Update User Account" />
-				</div>
-			</form>
-			<form th:action="@{/users/{userId}/delete(userId=${user.userId})}" method="post">
-				<input type="submit" value="Delete User Account" />
-			</form>
-		</div>
-		
-		<div th:unless="${#lists.size(users) == 1}" th:each="user : ${users}">
-		    <span th:text="${user.userId}"></span><br/>
-			<span th:text="${user.username}"></span><br/>
-			<span th:text="${user.name}"></span><br/>
-			<span th:text="${user.password}"></span>
-			<div th:each="account : ${user.accounts}">
-				<span th:text="${account.accountName}"></span>
+<head>
+<title>Users</title>
+</head>
+<body>
+	<h1>Users</h1>
+
+	<div th:if="${#lists.size(users) == 1}">
+		<form action="" method="post">
+			<div>
+				Username: <input type="text" th:field="${user.username}" />
 			</div>
-			<hr/>
+			<div>
+				Password: <input type="password" th:text="${user.password}" />
+			</div>
+			<div>
+				Full Name: <input type="text" th:field="${user.name}" />
+			</div>
+			<hr>
+		
+			<div>
+
+				<input type="submit" value="Update User Account" />
+			</div>
+
+		</form>
+
+		<form th:action="@{/users/{userId}/delete(userId=${user.userId})}"
+			method="post">
+			<input type="submit" value="Delete User Account" />
+		</form>
+	</div>
+	<hr>
+
+
+	<div th:unless="${#lists.size(users) == 1}" th:each="user : ${users}">
+
+		<a th:href="@{/users/{userId}(userId=${user.userId})}" target="_new">[[${user.userId}]]</a><br />
+		<span th:text="${user.username}"></span><br /> <span
+			th:text="${user.name}"></span><br /> <span
+			th:text="${user.password}"></span>
+		<div th:each="account : ${user.accounts}">
+			<a
+				th:href="@{/users/{userId}/accounts/{accountId}(accountId=${account.accountId},userId=${user.userId})}">[[${account.accountName}]]</a>
 		</div>
-	</body>
+		<hr />
+
+	</div>
+</body>
 </html>
