--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -12,18 +12,37 @@
 				Username: <input type="text" th:field="${user.username}" />
 			</div>
 			<div>
-				Password: <input type="password" th:text="${user.password}" />
+				Password: <input type="password" th:field="${user.password}" />
 			</div>
 			<div>
 				Full Name: <input type="text" th:field="${user.name}" />
 			</div>
+			<br>
 			<hr>
-		
 			<div>
-
+				addressLine1: <input type="text"
+					th:field="${user.address.addressLine1}" />
+			</div>
+			<div>
+				addressLine2: <input type="text"
+					th:field="${user.address.addressLine2}" />
+			</div>
+			<div>
+				City: <input type="text" th:field="${user.address.city}" />
+			</div>
+			<div>
+				Country: <input type="text" th:field="${user.address.country}" />
+			</div>
+			<div>
+				Region: <input type="text" th:field="${user.address.region}" />
+			</div>
+			<div>
+				ZipCode: <input type="text" th:field="${user.address.zipCode}" />
+			</div>
+			<br>
+			<div>
 				<input type="submit" value="Update User Account" />
 			</div>
-
 		</form>
 
 		<form th:action="@{/users/{userId}/delete(userId=${user.userId})}"
@@ -31,13 +50,16 @@
 			<input type="submit" value="Delete User Account" />
 		</form>
 	</div>
+
 	<hr>
 
 
 	<div th:unless="${#lists.size(users) == 1}" th:each="user : ${users}">
 
-		<a th:href="@{/users/{userId}(userId=${user.userId})}" target="_new">[[${user.userId}]]</a><br />
-		<span th:text="${user.username}"></span><br /> <span
+		<!-- target="_new" -->
+		<a th:href="@{/users/{userId}(userId=${user.userId})}"><span
+			th:text="${user.userId}"></span></a><br /> <span
+			th:text="${user.username}"></span><br /> <span
 			th:text="${user.name}"></span><br /> <span
 			th:text="${user.password}"></span>
 		<div th:each="account : ${user.accounts}">
