Craete a new bank account

--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -43,27 +43,32 @@
 			<div>
 				<input type="submit" value="Update User Account" />
 			</div>
+			<div>
+				<input type="hidden" th:field=${user.accounts} />
+			</div>
 		</form>
 
 		<form th:action="@{/users/{userId}/delete(userId=${user.userId})}"
 			method="post">
 			<input type="submit" value="Delete User Account" />
 		</form>
+
 		<hr>
 		<h2>Accounts</h2>
-
-
 		<div th:each="account : ${user.accounts}">
 			<a
-				th:href="@{/users/{userId}/accounts/{accountId}(accountId=${account.accountId},userId=${user.userId})}">[[${account.accountName}]]</a>
+				th:href="@{/users/{userId}/accounts/{accountId}(userId=${user.userId},   accountId=${account.accountId})}">
+				<span th:text="${account.accountName}"></span>
+			</a>
 		</div>
 		<br>
 
-		<form th:action="@{/users/{userId}/accounts(userId=${user.userId})}"
-			method="post">
+		<form method="post" action="@{/users/{userId}/accounts(userId=user.userId)}">
 			<input type="submit" value="Create New Account" />
 		</form>
-	<br>
+
+
+		<br>
 		<div>
 			<a href="/users">Back</a>
 		</div>
@@ -72,9 +77,8 @@
 
 
 	<div th:unless="${#lists.size(users) == 1}" th:each="user : ${users}">
-
-		<!-- target="_new" -->
-		<a th:href="@{/users/{userId}(userId=${user.userId})}"><span
+	
+		<a th:href="@{/users/{userId}(userId=${user.userId})}" target="_new"><span
 			th:text="${user.userId}"></span></a><br /> <span
 			th:text="${user.username}"></span><br /> <span
 			th:text="${user.name}"></span><br /> <span
