Create a new account

--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -8,7 +8,7 @@
 	<form method="post" action="">
 		Account Name: <input th:field="${account.accountName}" />
 		<div>
-			<input type="submit" value="Edit Account" />
+			<input type="submit" value="Save Account" />
 		</div>
 <!-- 		<div> -->
 <!-- 			<input type="hidden" th:field="account.accountId" /> -->
