--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html xmlns:th="http://thymeleaf.org">
 	<head>
-		<title>Create Account</title>
+		<title>Create Profile</title>
 	</head>
 	<body>
-		<h1>Create Your Account</h1>
+		<h1>Create Your Profile</h1>
 		
 		<form action="" method="post">
 			<div>
