Saving an account

--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -12,7 +12,7 @@
 			Account Name: <input th:field="${account.accountName}" />
 		</div>
 		<div>
-			<input type="text" th:field=${account.users} />
+			<input type="text" th:field=${user.accounts} />
 		</div>
 		<div>
 			<input type="submit" value="Save Account" />
