--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -65,7 +65,7 @@
 		<br>
 		<div>
 			<form th:action="@{/users/{userId}/accounts(userId=${user.userId})}"
-				method="get">
+				method="post">
 				<input type="submit" value="Create A New Account" />
 			</form>
 
