--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -44,7 +44,7 @@
 				<input type="submit" value="Update User Account" />
 			</div>
 			<div>
-				<input type="text" th:field=${user.accounts} />
+				<input type="hidden" th:field=${user.accounts} />
 			</div>
 
 		</form>
